# llm-gateway

./: .coderabbit.yaml  .env.example  .gitignore  CONTRIBUTING.md  LLM_GATEWAY_INVENTORY.md  README.md  TECHNICAL_CHANGE_LOG.md  docker-compose.dev.yml  docker-compose.hybrid.yml  docker-compose.yml  pyproject.toml  rebuild.sh  rebuild_with_gemini.command  requirements-dev.txt  requirements-docker.txt  requirements-prod.txt  requirements.txt  sonar-project.properties  test_routing.py
.github/: SECRETS.md
.github/workflows/: cd-dev.yml  cd-prod.yml  cd-staging.yml  ci.yml
config/: __init__.py  model_registry.yaml  tools.json
deploy/docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  requirements-docker.txt
docs/: API.md  ARCHITECTURE.md  Comp_Static_Analysis_Report_20251203.md  DEPLOYMENT_IMPLEMENTATION_PLAN.md  DOCKER_TROUBLESHOOTING.md  ENVIRONMENT_VARIABLES.md  GATEWAY_ROUTING_REFACTOR_WBS.md  INTEGRATION_GUIDE.md  INTEGRATION_MAP.md  MULTI_PROVIDER_ROUTING_WRITEUP.md  TECHNICAL_CHANGE_LOG.md  USE_CASE_ARCHITECTURE_ANALYSIS.md  openapi.json  openapi.yaml
scripts/: entrypoint.sh  export_openapi.py  healthcheck.sh  start.sh  sync_api_keys.sh  verify_full_stack.sh
src/: __init__.py  main.py
src/api/: __init__.py  deps.py
src/clients/: __init__.py  ai_agents.py  circuit_breaker.py  cms_client.py  http.py  semantic_search.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/models/: __init__.py  domain.py  requests.py  responses.py  tools.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/providers/: __init__.py  anthropic.py  base.py  deepseek.py  fake.py  gemini.py  inference.py  llamacpp.py  ollama.py  openai.py  openrouter.py  router.py
src/resilience/: __init__.py  circuit_breaker_state_machine.py  fallback_chain.py  metrics.py
src/services/: __init__.py  cache.py  chat.py  cost_tracker.py
src/sessions/: __init__.py  manager.py  store.py
src/tools/: __init__.py  executor.py  registry.py
tests/: conftest.py
tests/contract/: test_consumer_contracts.py  test_schemathesis.py
tests/docker/: test_dockerfile.sh
tests/integration/: conftest.py  test_agent_tools_integration.py  test_agent_workflow_integration.py  test_ai_agents_integration.py  test_chat_integration.py  test_code_orchestrator_routing.py  test_external_search.py  test_fallback_chain.py  test_health.py  test_resilience.py  (+4 more)
(+116 files in other folders)
